fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,8 @@ body {
   min-height: 200px;
   max-height: 400px;
   display: none;
+  box-sizing: border-box;
+  overflow: scroll;
 }
 #result-city p {
   display: block;
